--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Biker Zone</title>
-    <!-- Tailwind custom class -->
+    <!-- Tailwind custom class or css -->
     <script>
         tailwind.config = {
             theme: {
@@ -280,7 +280,7 @@
             </div>
         </section>
         <!-- FAQ -->
-        <section class="my-24 bg-white">
+        <section class="my-24 bg-white"> 
             <h2 class="text-5xl mb-12 font-semibold text-center">Frequently Asked <span class="text-bike-primary">Questions</span></h2>
             <div class="hero bg-white">
                 <div class="hero-content flex-col lg:gap-24 lg:flex-row">
