--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Biker Zone</title>
-    <!-- Tailwind custom class or css -->
+    <!-- Tailwind custom class -->
     <script>
         tailwind.config = {
             theme: {
